syntax="proto3";

package search_proto;
import "google/protobuf/wrappers.proto";
service SearchProto { 
    // 新增索引/变更索引
    rpc makeIndex(SearchIndexRequest) returns (google.protobuf.BoolValue);
    // 删除索引
    rpc dropIndex(DropIndexRequest) returns (google.protobuf.BoolValue);
}

enum SearchResultTypeEnum {
    GROUP = 0;
}

message SearchIndexRequest {
  SearchResultTypeEnum searchType = 1;
  string refId = 2;
  string indexValue = 3;
  string link = 4;
  string name = 5;
}
  
message DropIndexRequest {
  SearchResultTypeEnum searchType = 1;
  repeated string refIds = 2;
}